# ProjetoHEIWA-FAPESP

./: README.md  gerador.html
CSS/: style.css
CuradoriaExtracaoDados/: Pipeline_Limpeza_Dados.ipynb  README.md
CuradoriaExtracaoDados/BRASNAM2025-MaterialSuplementar/: ORIENTAÇÕES_PARA_ANOTAÇÃO_DO_DATASET.docx  PROMPT_POSICAO.md
CuradoriaExtracaoDados/pipeline_v1/: Pipeline_Limpeza_Dados.ipynb  README.md
CuradoriaExtracaoDados/pipeline_v2/: README.md  pyproject.toml  requirements.txt
CuradoriaExtracaoDados/pipeline_v2/pipeline_de_limpeza/: __init__.py  pipeline.py
CuradoriaExtracaoDados/src/: README.md
Visualizacao/projeto_d3_heiwa/ultima_versao/: README.md
Visualizacao/projeto_d3_heiwa/ultima_versao/Visualizacao/ultima_versao/: package-lock.json
Website/: package-lock.json  package.json
Website/public/: undraw-group-chat.tsx  undraw-online-connection.tsx
Website/public/logos/: ciberdem-logo.tsx  fapesp-logo.tsx  heiwa-new-logo.tsx  mack-logo.tsx
Website/src/app/: globals.css  layout.tsx  page.tsx
Website/src/app/membros/: page.tsx
Website/src/app/noticias/: page.tsx
Website/src/app/noticias/wtt2024/apresentacao/: page.tsx
Website/src/app/resultados/: page.tsx
Website/src/app/sobre/: page.tsx
Website/src/components/: embed-map.tsx  embed-video.tsx  footer-nav.tsx  header-nav.tsx
Website/src/components/ui/: avatar.tsx  badge.tsx
Website/src/lib/: contacts.ts  firstparagraphs.ts  lastparagraphs.ts  members.ts  newslist.ts  results.ts  routes.ts
script/: botoesSequenciais.js  script.js
server/: server.js
src/: README.md
(+1 files in other folders)
